--- a/boende.html
+++ b/boende.html
@@ -71,10 +71,10 @@
             <li class="nav-item">
               <a class="nav-link" href="besokOss.html">Besök oss</a>
             </li>
-        <!--    <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="nyheter.html">Nyheter</a>
             </li>
-            <li class="nav-item">
+          <!--  <li class="nav-item">
               <a class="nav-link" href="medlem.html">Medlem</a>
             </li>
             <li class="nav-item">
@@ -228,12 +228,11 @@
           <p>
             Anpassning till naturen och kulturhistorian på platsen och kopplingen till odlingslandskapet och levande <br>
             lantbruk är det övergripande temat. Det kan nämnas att när gården blomstrade på 1800 talet var den ett lokalt <br>
-            produktionscentrum med bland annat lanthandel, eget bränneri och mejeri. Läs mer om Arbottnas historia på <br>
+            produktionscentrum med bland annat lanthandel, eget bränneri och mejeri. <br>
             <br>
             <a href="http://www.musko.nu/arbottna-herrgard/" class="btn btn-lg btn-block btn-outline-dark" role="button" style="width: 350px;" aria-pressed="true">Läs mer om Arbottnas historia</a>
-
-
           </p>
+
           <br>
           <h4>Ditt boende på Arbottna säteri</h4>
           <p>Under de kommande åren planerar vi att bygga ett flertal byar med hus i varierande stilar och storlekar.<br>
