--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <li class="nav-item">
               <a class="nav-link" href="besokOss.html">Besök oss</a>
             </li>
-        <!--       <li class="nav-item">
+               <li class="nav-item">
            <a class="nav-link" href="nyheter.html">Nyheter</a>
             </li>
-            <li class="nav-item">
+        <!--    <li class="nav-item">
               <a class="nav-link" href="medlem.html">Medlem</a>
             </li>
             <li class="nav-item">
@@ -135,7 +135,7 @@
         <div class="mask rgba-black-strong"></div>
       </div>
       <div class="carousel-caption">
-        <h3 class="h3-responsive">Bli medlem i Drömgården och förverkliga din dröm om landet.</h3>
+        <h3 class="h3-responsive">Bli medlem i Arbottna Säteri och förverkliga din dröm om landet.</h3>
         <p></p>
       </div>
     </div>
@@ -147,7 +147,7 @@
         <div class="mask rgba-black-slight"></div>
       </div>
       <div class="carousel-caption">
-        <h3 class="h3-responsive">Besök oss på Drömgården och upplev vår vackra natur</h3>
+        <h3 class="h3-responsive">Besök oss på Arbottna Säteri och upplev vår vackra natur</h3>
         <p></p>
       </div>
     </div>
@@ -179,7 +179,8 @@
     <!-- bg-dark pt-3 px-3 pt-md-5 px-md-5text-center overflow-hidden -->
     <div class="my-2 p-2">
       <!--  -->
-      <h2 class="feature-title">Välkommen till Arbottna säteri</h3>
+      <h2 class="feature-title">Välkommen till Arbottna Säteri</h3>
+  <hr style="width: 70%;">
 <p>Hälsa, umgänge och välbefinnande styr allt vi skapar på Arbottna Säteri. Här har du nu möjlighet <br>
    att bo i ett av Sveriges vackraste naturområden men ändå ha bara 40 minuters bilresa till Stockholm. <br>
    Vi bygger hus i naturen med gammal bykänsla och låter naturen ha huvudrollen för de som bor på och <br>
@@ -321,6 +322,7 @@
                 <div class="overlay">
                     <a href="boende.html"><img src="images/boende1Album.jpg" style="width: 100%;" /></a>
                     <a href="boende.html"><h2>Boende</h2></a>
+
 
 
                 </div>
@@ -512,6 +514,7 @@
       <div class="my-3 p-3">
         <!--  -->
         <h2 class="feature-title">Butik</h3>
+            <hr style="width: 30%;">
           <p>Vår Gårdsbutik kommer att tillhandahålla en mängd produkter
 som inte går att köpa så lätt och som vårt kök valt ut med
 inspiration för en bättre hälsa. Dessutom kommer det att finnas
@@ -562,6 +565,7 @@ Allt för att inspirera och överraska!</p>
         <div class="my-3 p-3">
           <!--  -->
           <h2 class="feature-title">Café</h2>
+          <hr style="width: 30%;">
             <p>Cafeserveringen och kanske en ev pub kommer att vara öppen för
 både boende på herrgården och besökare. Här kommer det att
 finnas nybakta bullar men också hälsosamma alternativ som
@@ -687,6 +691,7 @@ Välkommen att besöka Drömgården Arbottna på Muskö i Stockholms skärgård.
       <!--      <i class="icon fas fa-exclamation fa-4x"></i> -->
 
           <h3 class="feature-title">Kontakt</h3>
+          <hr>
 
           <p>Besöksadress Muskö:
 Arbottnavägen 19-21,
